--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: GSE
 description: GnomeSequencer-Enhanced - Advanced Macros for World of Warcraft
 google_analytics: 
 show_downloads: true
-theme: jekyll-theme-midnight
+theme: jekyll-theme-hacker
 
 gems:
   - jekyll-mentions
